--- a/backoffice/index.html
+++ b/backoffice/index.html
@@ -11,7 +11,7 @@
     <body>
         <div id="menuPrincipal" class="menuPrincipal ocultar">
             <div class="menuItens">
-                <a href="#" target="fprincipal" class="btn_menuItem">Colaboradores</a>
+                <a href="./colaboradores/colaboradores.html" target="fprincipal" class="btn_menuItem">Colaboradores</a>
                 <a href="#" class="btn_menuItem">CBF Cursos1</a>
                 <a href="#" class="btn_menuItem">CBF Cursos2</a>
                 <a href="#" class="btn_menuItem">CBF Cursos3</a>
@@ -21,6 +21,21 @@
                 <img src="../imgs/menu.svg" id="btn_menuPrincipal" class="btn_menuPrincipal"  alt="">
             </div>
         </div>
+
+        <div id="topo" class="topo">
+            <div></div>
+            <div id="logo" class="logo">Logo</div>
+            <div id="config" class="config">
+                <div>
+                    <div>id</div>
+                    <div>nome</div>
+                </div>
+                <div>
+                    <img src="../imgs/config.svg" id="btn_config" class="btn_config"  alt="">
+                </div>
+            </div>
+        </div>
+
 
         <div id="principal" class="principal">
             <iframe name="fprincipal" class="fprincipal"></iframe>
