--- a/backoffice/colaboradores/colaboradores.html
+++ b/backoffice/colaboradores/colaboradores.html
@@ -9,7 +9,18 @@
     <link rel="stylesheet" type="text/css" href="colaboradores.css">
   </head>
   <body>
-  <h2>Colaboradores</h2>
+    <div id="topoJanela" class="topoJanela"></div>
+    <div id="grid" class="grid">
+      <div id="tituloGrid" class="tituloGrid">
+        <div class="colunaTituloGrid c1">ID</div>
+        <div class="colunaTituloGrid c2">Nome</div>
+        <div class="colunaTituloGrid c3">Tipo</div>
+        <div class="colunaTituloGrid c4">Status</div>
+      </div>
+      <div id="dadosGrid" class="dadosGrid">
+
+      </div>
+    </div>
 
   <script src="/estoque_geral.js" type="module"></script>
   <script src="colaboradores.js" type="module"></script>
