--- a/backoffice/colaboradores/colaboradores.html
+++ b/backoffice/colaboradores/colaboradores.html
@@ -10,7 +10,13 @@
   </head>
   <body>
     <div id="topoJanela" class="topoJanela">
-      topo
+
+      <div></div>
+      <div>Colaboradores</div>
+      <div>
+        <img src="../../imgs/add.svg" class="btn_mainoper" title="Adicionar novo Colaborador" alt="">
+      </div>
+
     </div>
     <div id="grid" class="grid">
       <div id="tituloGrid" class="tituloGrid">
