--- a/backoffice/colaboradores/colaboradores.html
+++ b/backoffice/colaboradores/colaboradores.html
@@ -17,6 +17,16 @@
         <img src="../../imgs/add.svg" class="btn_mainoper" title="Adicionar novo Colaborador" alt="">
       </div>
 
+      <div id="novoColaborador" class="popup">
+        <div class="janelaPopup">
+          <div class="tituloPopup">
+            <div>Novo Colaborador</div>
+            <img src="../../imgs/close.svg" class="btn_janelaopera" id="btn_fechar">
+          </div>
+          <div class="corpoPopup"> teste corpo</div>
+          <div class="rodapePopup">teste rodape</div>
+        </div>
+      </div>
     </div>
     <div id="grid" class="grid">
       <div id="tituloGrid" class="tituloGrid">
